# pyjournal2

./: .gitignore  LICENSE  README.md  build_util.py  entry_util.py  git_util.py  pyjournal.py  pyproject.toml  setup.py  shell_util.py  todo
.github/workflows/: flake8.yml  pylint.yml
pyjournal2/: build_util.py  entry_util.py  git_util.py  main_util.py  pyjournal.py  shell_util.py
pyjournal2/sphinx_base/source/: conf.py  index.rst  mathsymbols.tex
pyjournal2/sphinx_base/source/_static/: mathjax_conf.js
pyjournal2/sphinx_base/source/main/: main.rst
sphinx_base/source/: conf.py  conf.py~  index.rst  index.rst~
sphinx_base/source/_static/: README
sphinx_base/source/xrb/: index.rst~  xrb.rst  xrb.rst~  xrb_oct_2018.rst  xrb_oct_2018.rst~
