# pyproject.toml
[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

# project metadata

[project]
name = "pyjournal2"
description = "A simple sphinx and git-based research journal"
readme = "README.md"
license.text = "BSD"
authors = [
  {name="Michael Zingale"},
  {email="michael.zingale@stonybrook.edu"},
]
version = "1.3.1"

dependencies = [
  "sphinx",
  "sphinx_rtd_theme",
]

[project.scripts]
"pyjournal" = "pyjournal2.main_util:run"

[project.urls]
Homepage = "https://github.com/zingale/pyjournal2"


# packaging

[tool.setuptools]
zip-safe = false
# we explicitly list the data we want below
include-package-data = false

[tool.setuptools.packages.find]
include = ["pyjournal2*"]
namespaces = false

[tool.setuptools.package-data]
# additional files to include when building a wheel
pyjournal2 = ["sphinx_base/*",
              "sphinx_base/source/*",
              "sphinx_base/source/main/*",
              "sphinx_base/source/_static/*",
              "sphinx_base/source/_templates/*"]


# development tools

[tool.pylint.MAIN]
ignore-patterns = "flycheck*,_version.py"

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "unspecified-encoding",
  "line-too-long",
  "wrong-import-order",
  "too-many-branches",
  "too-many-lines",
  "too-many-statements",
  "too-many-instance-attributes",
  "too-many-arguments",
  "too-many-locals",
  "too-few-public-methods",
  "invalid-name",
]
enable = ["useless-suppression"]

[tool.pylint.CLASSES]
defining-attr-methods = [
  "__init__",
  "__new__",
  "setUp",
  "asyncSetUp",
  "__post_init__",
  "setup_class", "setup_method",  # for tests
]

[tool.pylint.FORMAT]
max-line-length = 132

[tool.pylint.SIMILARITIES]
min-similarity-lines = 10

[tool.pylint.TYPECHECK]


[tool.codespell]
skip = ".git"
